--- a/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/zh-TW.json
+++ b/src/adapter/ThingsGateway.Foundation.Dlt645/Locales/zh-TW.json
@@ -21,7 +21,7 @@
     "AddressDes": "資料標誌地址\n\n查看附帶文檔或者相關資料，下面列舉一些常見的資料標誌地址\n\n地址                       說明\n-----------------------------------------\n02010100    A相電壓\n02020100    A相電流\n02030000    瞬時總有功功率\n00000000    (當前)組合有功總電能\n00010000    (當前)正向有功總電能",
     "SumError": "和校驗錯誤",
     "StationNotSame": "站號不一致",
-    "FunctionError": "異常控制碼：{0}，錯誤信息：{1}",
+    "FunctionError": "異常控制碼：{0}，錯誤資訊：{1}",
     "FunctionNotSame": "功能碼不一致，請求功能碼 {0}，返回功能碼 {1}",
     "DataIdNotSame": "返回資料標誌不符合規則",
     "BaudRateError": "不支援此波特率 {0}",
