--- a/src/ThingsGateway.Server/Locales/zh-TW.json
+++ b/src/ThingsGateway.Server/Locales/zh-TW.json
@@ -1,78 +1,471 @@
 ﻿{
   "ThingsGateway.Razor.MainLayout": {
     "About": "關於",
-    "FullScreenButton": "全屏",
+    "FullScreenButton": "全螢幕",
     "UserCenter": "個人中心",
     "ChoiceModule": "切換模組",
-    "LoginErrorh1": "登錄異常",
-    "LoginSuccessh1": "登錄成功",
+    "LoginErrorh1": "登入異常",
+    "LoginSuccessh1": "登入成功",
     "LoginSuccessc1": "即將跳轉頁面",
-    "LoginErrorh2": "登錄失敗",
+    "LoginErrorh2": "登入失敗",
     "LoginErrorc2": "請聯繫管理員!",
     "Logout": "登出",
 
-
     "系统首页": "系統首頁",
     "权限管理": "權限管理",
-    "用户管理": "用戶管理",
+    "用户管理": "使用者管理",
     "角色管理": "角色管理",
-    "菜单管理": "菜單管理",
+    "菜单管理": "選單管理",
     "系统运维": "系統運維",
     "系统配置": "系統配置",
     "字典管理": "字典管理",
-    "操作日志": "操作日誌",
+    "操作日志": "操作記錄",
     "会话管理": "會話管理",
-    "硬件信息": "硬件信息",
-    "网关管理": "網關管理",
+    "硬件信息": "硬體資訊",
+    "网关管理": "閘道管理",
     "插件管理": "插件管理",
-    "插件调试": "插件調試",
+    "插件调试": "插件除錯",
     "通道管理": "通道管理",
     "采集设备": "採集設備",
     "业务设备": "業務設備",
-    "变量管理": "變量管理",
-    "网关状态": "網關狀態",
+    "变量管理": "變數管理",
+    "网关状态": "閘道狀態",
     "设备状态": "設備狀態",
-    "实时数据": "實時數據",
-    "实时报警": "實時警報",
-    "网关日志": "網關日誌",
-    "后台日志": "後台日誌",
-    "RPC日志": "RPC日誌",
-    "物联网关": "物聯網關",
+    "实时数据": "即時資料",
+    "实时报警": "即時警報",
+    "网关日志": "閘道記錄",
+    "后台日志": "後台記錄",
+    "RPC日志": "RPC記錄",
+    "物联网关": "物聯閘道",
     "系统管理": "系統管理"
-
   },
   "ThingsGateway.Admin.Razor.AdminIndex": {
     "CollectDevice": "採集設備",
     "BusinessDevice": "業務設備",
-    "Variable": "變量",
-    "Alarm": "實時警報",
+    "Variable": "變數",
+    "Alarm": "即時警報",
     "AlarmCount": "警報數量",
     "OnLine": "在線",
     "OffLine": "離線",
     "Shortcuts": "快捷方式",
     "OperLog": "最近操作",
-    "BackendLog": "網關後台日誌",
-    "RpcLog": "網關RPC日誌",
-    "HardwareInfoChart": "硬件信息歷史曲線",
+    "BackendLog": "閘道後台記錄",
+    "RpcLog": "閘道RPC記錄",
+    "HardwareInfoChart": "硬體資訊歷史曲線",
     "DateTime": "時間",
-    "Data": "數據",
+    "Data": "資料",
     "HisHardwareInfo": "歷史曲線"
   },
   "ThingsGateway.Gateway.Razor.GatewayIndex": {
     "CollectDevice": "採集設備",
     "BusinessDevice": "業務設備",
-    "Variable": "變量",
-    "Alarm": "實時警報",
+    "Variable": "變數",
+    "Alarm": "即時警報",
     "AlarmCount": "警報數量",
     "OnLine": "在線",
     "OffLine": "離線",
     "Shortcuts": "快捷方式",
     "OperLog": "最近操作",
-    "BackendLog": "網關後台日誌",
-    "RpcLog": "網關RPC日誌",
-    "HardwareInfoChart": "硬件信息歷史曲線",
+    "BackendLog": "閘道後台記錄",
+    "RpcLog": "閘道RPC記錄",
+    "HardwareInfoChart": "硬體資訊歷史曲線",
     "DateTime": "時間",
-    "Data": "數據",
+    "Data": "資料",
     "HisHardwareInfo": "歷史曲線"
+  },
+  "BootstrapBlazor.Components.AutoComplete": {
+    "NoDataTip": "無匹配資料",
+    "PlaceHolder": "請輸入"
+  },
+  "BootstrapBlazor.Components.Captcha": {
+    "HeaderText": "請完成安全認證",
+    "BarText": "向右滑動填滿拼圖",
+    "FailedText": "載入失敗",
+    "LoadText": "正在載入 ...",
+    "TryText": "再試一次"
+  },
+  "BootstrapBlazor.Components.Camera": {
+    "DeviceLabel": "攝影機",
+    "InitDevicesString": "正在識別攝影機",
+    "PlayText": "開啟",
+    "StopText": "關閉",
+    "PhotoText": "拍照",
+    "FrontText": "前面",
+    "BackText": "後面",
+    "NotFoundDevicesString": "未找到視訊相關設備"
+  },
+  "BootstrapBlazor.Components.Calendar": {
+    "PreviousYear": "上一年",
+    "PreviousMonth": "上一月",
+    "Today": "今天",
+    "NextMonth": "下一月",
+    "NextYear": "下一年",
+    "PreviousWeek": "上一週",
+    "WeekText": "本週",
+    "NextWeek": "下一週",
+    "WeekHeaderText": "週",
+    "WeekLists": "日,一,二,三,四,五,六",
+    "WeekNumberText": "第 {0} 週",
+    "Months": "1,2,3,4,5,6,7,8,9,10,11,12",
+    "Title": "{0} 年 {1} 月"
+  },
+  "BootstrapBlazor.Components.Cascader": {
+    "PlaceHolder": "請選擇 ..."
+  },
+  "BootstrapBlazor.Components.Console": {
+    "HeaderText": "系統監控",
+    "LightTitle": "通訊指示燈",
+    "ClearButtonText": "清除",
+    "AutoScrollText": "自動捲動"
+  },
+  "BootstrapBlazor.Components.DateTimePicker": {
+    "DatePlaceHolder": "選擇日期",
+    "TimePlaceHolder": "選擇時間",
+    "DateTimePlaceHolderText": "請選擇日期時間",
+    "DatePlaceHolderText": "請選擇日期",
+    "TimeFormat": "hh\\:mm\\:ss",
+    "DateFormat": "yyyy-MM-dd",
+    "DateTimeFormat": "yyyy-MM-dd HH\\:mm\\:ss",
+    "AiraPrevYearLabel": "前一年",
+    "AiraNextYearLabel": "後一年",
+    "AiraPrevMonthLabel": "上一月",
+    "AiraNextMonthLabel": "下一月",
+    "ClearButtonText": "清空",
+    "NowButtonText": "此刻",
+    "ConfirmButtonText": "確定",
+    "CancelButtonText": "取消",
+    "YearText": "{0} 年",
+    "MonthText": "{0} 月",
+    "YearPeriodText": "{0} 年 - {1} 年",
+    "Months": "1,2,3,4,5,6,7,8,9,10,11,12",
+    "MonthLists": "一月,二月,三月,四月,五月,六月,七月,八月,九月,十月,十一月,十二月",
+    "WeekLists": "日,一,二,三,四,五,六",
+    "GenericTypeErroMessage": "DateTimePicker 元件僅支援綁定泛型為 DateTime 或者 DateTime?",
+    "Today": "今天",
+    "Yesterday": "昨天",
+    "Weekago": "一週前"
+  },
+  "BootstrapBlazor.Components.DateTimeRange": {
+    "SeparateText": "至",
+    "StartPlaceHolderText": "開始日期",
+    "EndPlaceHolderText": "結束日期",
+    "ClearButtonText": "清空",
+    "TodayButtonText": "今天",
+    "ConfirmButtonText": "確定",
+    "DateTimeFormat": "yyyy-MM-dd HH\\:mm\\:ss",
+    "DateFormat": "yyyy-MM-dd",
+    "Last7Days": "最近 7 天",
+    "Last30Days": "最近 30 天",
+    "ThisMonth": "這個月",
+    "LastMonth": "上個月"
+  },
+  "BootstrapBlazor.Components.BootstrapInputNumber": {
+    "ParsingErrorMessage": "{0}欄位值必須為 Number 類型"
+  },
+  "BootstrapBlazor.Components.ResultDialogOption": {
+    "ButtonYesText": "確認",
+    "ButtonNoText": "取消",
+    "ButtonCloseText": "關閉"
+  },
+  "BootstrapBlazor.Components.DropdownList": {
+    "PlaceHolder": "請選擇 ..."
+  },
+  "BootstrapBlazor.Components.Editor": {
+    "PlaceHolder": "點擊後編輯"
+  },
+  "BootstrapBlazor.Components.EditorForm": {
+    "ModelInvalidOperationExceptionMessage": "驗證表單與 {0} 綁定模型不一致",
+    "PlaceHolderText": "請輸入 ..."
+  },
+  "BootstrapBlazor.Components.Empty": {
+    "Text": "暫無描述"
+  },
+  "BootstrapBlazor.Components.EqualToValidator": {
+    "ErrorMessage": "你的輸入不相同"
+  },
+  "BootstrapBlazor.Components.ErrorLogger": {
+    "ToastTitle": "應用程式錯誤"
+  },
+  "BootstrapBlazor.Components.GoTop": {
+    "TooltipText": "返回頂端"
+  },
+  "BootstrapBlazor.Components.Layout": {
+    "TooltipText": "點擊展開收縮左側選單"
+  },
+  "BootstrapBlazor.Components.Logout": {
+    "PrefixDisplayNameText": "歡迎",
+    "PrefixUserNameText": "當前帳號:"
+  },
+  "BootstrapBlazor.Components.LogoutLink": {
+    "Text": "登出"
+  },
+  "BootstrapBlazor.Components.Menu": {
+    "InvalidOperationExceptionMessage": "SideMenu 元件不可以獨立使用，請使用 Menu 元件設置 IsVertical=true"
+  },
+  "BootstrapBlazor.Components.ModalDialog": {
+    "CloseButtonText": "關閉",
+    "SaveButtonText": "儲存",
+    "PrintButtonText": "印出",
+    "ExportPdfButtonText": "匯出 Pdf"
+  },
+  "BootstrapBlazor.Components.MultiSelect": {
+    "PlaceHolder": "點擊進行多選 ...",
+    "SelectAllText": "全選",
+    "ReverseSelectText": "反選",
+    "ClearText": "清除",
+    "MinErrorMessage": "最少請選擇 {0} 項",
+    "MaxErrorMessage": "最多可以選擇 {0} 項"
+  },
+  "BootstrapBlazor.Components.Pagination": {
+    "GotoNavigatorLabelText": "切換到",
+    "AiraPageLabel": "分頁元件",
+    "AiraPrevPageText": "上一頁",
+    "AiraFirstPageText": "第一頁",
+    "AiraNextPageText": "下一頁",
+    "PageInfoText": "顯示第 {0} 到第 {1} 筆記錄",
+    "TotalInfoText": "，總共 {0} 筆記錄",
+    "PrePageInfoText": "每頁顯示",
+    "RowInfoText": "筆記錄",
+    "LabelString": "第 {0} 頁",
+    "SelectItemsText": "{0}"
+  },
+  "BootstrapBlazor.Components.PopConfirmButton": {
+    "CloseButtonText": "取消",
+    "ConfirmButtonText": "確定",
+    "Content": "你確定要執行此項操作嗎？"
+  },
+  "BootstrapBlazor.Components.PrintButton": {
+    "Text": "印出"
+  },
+  "BootstrapBlazor.Components.Repeater": {
+    "EmptyText": "無資料"
+  },
+  "BootstrapBlazor.Components.Search": {
+    "SearchButtonText": "搜尋"
+  },
+  "BootstrapBlazor.Components.Select": {
+    "PlaceHolder": "請選擇 ...",
+    "NoSearchDataText": "無資料"
+  },
+  "BootstrapBlazor.Components.SelectTree": {
+    "PlaceHolder": "請選擇 ..."
+  },
+  "BootstrapBlazor.Components.StringLengthValidator": {
+    "ErrorMessage": "最多可以輸入 {{0}} 個字元"
+  },
+  "BootstrapBlazor.Components.SweetAlert": {
+    "CloseButtonText": "關閉",
+    "CancelButtonText": "取消",
+    "ConfirmButtonText": "確認"
+  },
+  "BootstrapBlazor.Components.Switch": {
+    "OnInnerText": "開",
+    "OffInnerText": "關"
+  },
+  "BootstrapBlazor.Components.Tab": {
+    "CloseCurrentTabText": "關閉當前標籤",
+    "CloseOtherTabsText": "關閉其他標籤",
+    "CloseAllTabsText": "關閉所有標籤",
+    "NotFoundTabText": "未找到"
+  },
+  "BootstrapBlazor.Components.MultiFilter": {
+    "MultiFilterSearchPlaceHolderText": "請輸入 ...",
+    "MultiFilterSelectAllText": "全選"
+  },
+  "BootstrapBlazor.Components.Table": {
+    "AddButtonText": "新增",
+    "EditButtonText": "編輯",
+    "UpdateButtonText": "更新",
+    "DeleteButtonText": "刪除",
+    "CancelButtonText": "取消",
+    "SaveButtonText": "儲存",
+    "CloseButtonText": "關閉",
+    "CancelDeleteButtonText": "取消",
+    "ConfirmDeleteButtonText": "刪除",
+    "ConfirmDeleteContentText": "確認要刪除選中的所有列嗎？",
+    "RefreshButtonText": "重整",
+    "CardViewButtonText": "視圖",
+    "ColumnButtonTitleText": "欄位顯示隱藏控制",
+    "ColumnButtonText": "欄",
+    "ExportButtonText": "匯出資料",
+    "SearchPlaceholderText": "搜尋",
+    "SearchButtonText": "搜尋",
+    "ResetSearchButtonText": "清空搜尋",
+    "AdvanceButtonText": "進階搜尋",
+    "AdvancedSortModalTitle": "自定義排序",
+    "AdvancedSortButtonText": "進階排序",
+    "CheckboxDisplayText": "選擇",
+    "EditModalTitle": "編輯視窗",
+    "AddModalTitle": "新建視窗",
+    "LineNoText": "序號",
+    "ColumnButtonTemplateHeaderText": "操作",
+    "SearchTooltip": "<div class='search-input-tooltip'>輸入任意字串全域搜尋</br><kbd>Enter</kbd> 搜尋 <kbd>ESC</kbd> 清除搜尋</div>",
+    "SearchModalTitle": "搜尋條件",
+    "AddButtonToastTitle": "新建資料",
+    "AddButtonToastContent": "未提供新建資料方法，無法新建資料",
+    "EditButtonToastTitle": "編輯資料",
+    "EditButtonToastNotSelectContent": "請選擇要編輯的資料",
+    "EditButtonToastReadonlyContent": "選項不可編輯",
+    "EditButtonToastMoreSelectContent": "只能選擇一項要編輯的資料",
+    "EditButtonToastNoSaveMethodContent": "未提供儲存資料方法，無法編輯資料",
+    "SaveButtonToastTitle": "儲存資料",
+    "SaveButtonToastContent": "未提供儲存資料方法，無法儲存資料",
+    "SaveButtonToastResultContent": "儲存資料{0}, {1} 秒後自動關閉",
+    "SuccessText": "成功",
+    "FailText": "失敗",
+    "DeleteButtonToastTitle": "刪除資料",
+    "DeleteButtonToastContent": "請選擇要刪除的資料, {0} 秒後自動關閉",
+    "DeleteButtonToastResultContent": "刪除資料{0}, {1} 秒後自動關閉",
+    "DeleteButtonToastCanNotDeleteContent": "選中資料中有不可刪除資料, {0} 秒後自動關閉",
+    "DataServiceInvalidOperationText": "未註冊 'BootstrapBlazor.Components.IDataService`1[{0}]' 服務",
+    "NotSetOnTreeExpandErrorMessage": "未設置 OnTreeExpand 回調委託方法",
+    "UnsetText": "點擊升冪",
+    "SortAscText": "點擊降冪",
+    "SortDescText": "取消排序",
+    "EmptyText": "無資料",
+    "ExportToastTitle": "匯出資料",
+    "ExportToastContent": "匯出資料 {0}，{1} 秒後自動關閉",
+    "ExportToastInProgressContent": "正在匯出資料，請稍後, {0} 秒後自動關閉",
+    "ExportCsvDropdownItemText": "微軟 Csv 格式",
+    "ExportExcelDropdownItemText": "微軟 Excel 格式",
+    "ExportPdfDropdownItemText": "Pdf 格式",
+    "PageInfoText": "{0} - {1} 共 {2} 筆",
+    "PageItemsText": "{0} 筆/頁",
+    "CopyColumnTooltipText": "複製列到剪貼簿",
+    "CopyColumnCopiedTooltipText": "已複製",
+    "ColumnWidthTooltipPrefix": "寬度：",
+    "ColumnToolboxTitle": "操作",
+    "AlignLeft": "左對齊",
+    "AlignLeftTooltip": "點擊後本列左對齊",
+    "AlignCenter": "置中",
+    "AlignRight": "右對齊"
+  },
+  "BootstrapBlazor.Components.EditDialog": {
+    "CloseButtonText": "關閉",
+    "SaveButtonText": "儲存"
+  },
+  "BootstrapBlazor.Components.TableFilter": {
+    "Title": "篩選",
+    "ClearButtonText": "重置",
+    "FilterButtonText": "確認",
+    "BoolFilter.AllText": "全部",
+    "BoolFilter.TrueText": "選中",
+    "BoolFilter.FalseText": "未選中",
+    "GreaterThanOrEqual": "大於等於",
+    "LessThanOrEqual": "小於等於",
+    "GreaterThan": "大於",
+    "LessThan": "小於",
+    "Equal": "等於",
+    "NotEqual": "不等於",
+    "Contains": "包含",
+    "NotContains": "不包含",
+    "EnumFilter.AllText": "全選",
+    "NotSupportedMessage": "不支援的類型，請使用 FilterTemplate 自定義篩選元件"
+  },
+  "BootstrapBlazor.Components.FilterLogicItem": {
+    "And": "並且",
+    "Or": "或者"
+  },
+  "BootstrapBlazor.Components.SearchDialog": {
+    "ResetButtonText": "重置",
+    "QueryButtonText": "查詢"
+  },
+  "BootstrapBlazor.Components.SwitchButton": {
+    "OnText": "開",
+    "OffText": "關"
+  },
+  "BootstrapBlazor.Components.Timer": {
+    "PauseText": "暫停",
+    "ResumeText": "繼續",
+    "CancelText": "取消",
+    "StarText": "開始計時"
+  },
+  "BootstrapBlazor.Components.Toggle": {
+    "OnText": "展開",
+    "OffText": "收縮"
+  },
+  "BootstrapBlazor.Components.Transfer": {
+    "LeftPanelText": "全部",
+    "RightPanelText": "已選",
+    "MinErrorMessage": "最少請選擇{0}項",
+    "MaxErrorMessage": "最多可選擇{0}項"
+  },
+  "BootstrapBlazor.Components.TransferPanel": {
+    "SearchPlaceHolderString": "請輸入 ...",
+    "Text": "列表"
+  },
+  "BootstrapBlazor.Components.Tree": {
+    "NotSetOnTreeExpandErrorMessage": "未設置 OnExpandNodeAsync 回調委託方法"
+  },
+  "BootstrapBlazor.Components.TreeView": {
+    "NotSetOnTreeExpandErrorMessage": "未設置 OnExpandNodeAsync 回調委託方法"
+  },
+  "BootstrapBlazor.Components.UploadBase": {
+    "DeleteButtonText": "刪除",
+    "BrowserButtonText": "瀏覽",
+    "FileExtensions": "檔案類型必須為以下幾種格式: {0}",
+    "FileSizeValidation": "檔案太大，限制大小為 {0}"
+  },
+  "BootstrapBlazor.Components.Handwritten": {
+    "SaveButtonText": "儲存",
+    "ClearButtonText": "清除"
+  },
+  "BootstrapBlazor.Components.SignaturePad": {
+    "SignAboveLabel": "在框內簽名",
+    "ClearBtnTitle": "清除",
+    "SignatureAlertText": "請先簽名",
+    "ChangeColorBtnTitle": "換顏色",
+    "UndoBtnTitle": "復原",
+    "CloseBtnTitle": "關閉",
+    "SaveBase64BtnTitle": "確定",
+    "SavePNGBtnTitle": "PNG",
+    "SaveJPGBtnTitle": "JPG",
+    "SaveSVGBtnTitle": "SVG"
+  },
+  "BootstrapBlazor.Components.NullableBoolItemsAttribute": {
+    "NullValueDisplayText": "請選擇 ...",
+    "TrueValueDisplayText": "True",
+    "FalseValueDisplayText": "False"
+  },
+  "BootstrapBlazor.Components.InsertRowMode": {
+    "Last": "最後",
+    "First": "最前"
+  },
+  "BootstrapBlazor.Components.IconDialog": {
+    "LabelText": "選擇圖示",
+    "LabelFullText": "完整內容",
+    "ButtonText": "點擊複製",
+    "DialogHeaderText": "請選擇圖示",
+    "CopiedTooltipText": "複製成功"
+  },
+  "BootstrapBlazor.Components.Splitting": {
+    "Text": "正在載入 ..."
+  },
+  "BootstrapBlazor.Components.QueryBuilder": {
+    "And": "並且",
+    "Or": "或者",
+    "GreaterThanOrEqual": "大於等於",
+    "LessThanOrEqual": "小於等於",
+    "GreaterThan": "大於",
+    "LessThan": "小於",
+    "Equal": "等於",
+    "NotEqual": "不等於",
+    "Contains": "包含",
+    "NotContains": "不包含",
+    "GroupText": "組合條件",
+    "ItemText": "單行條件"
+  },
+  "BootstrapBlazor.Components.TableAdvancedSortDialog": {
+    "AscText": "升冪",
+    "DescText": "降冪"
+  },
+  "BootstrapBlazor.Components.ClockPicker": {
+    "AMText": "上午",
+    "PMText": "下午"
+  },
+  "BootstrapBlazor.Components.ThemeProvider": {
+    "AutoModeText": "自動",
+    "DarkModeText": "暗黑",
+    "LightModeText": "明亮"
   }
 }
