--- a/src/ThingsGateway.Gateway.Application/Locales/zh-TW.json
+++ b/src/ThingsGateway.Gateway.Application/Locales/zh-TW.json
@@ -10,7 +10,7 @@
     "MethodVariableCount": "方法數量",
     "ActiveTime": "活動時間",
     "DeviceVariableCount": "變數數量",
-    "LastErrorMessage": "下線原因",
+    "LastErrorMessage": "離線原因",
     "Name": "名稱",
     "Name.Required": " {0} 不可為空",
     "Description": "描述",
@@ -49,7 +49,7 @@
     "MethodVariableCount": "方法數量",
     "ActiveTime": "活動時間",
     "DeviceVariableCount": "變數數量",
-    "LastErrorMessage": "下線原因",
+    "LastErrorMessage": "離線原因",
     "Name": "名稱",
     "Name.Required": " {0} 不可為空",
     "Description": "描述",
@@ -88,7 +88,7 @@
     "CollectTime": "採集時間",
     "DeviceName": "設備名稱",
     "IsOnline": "上線",
-    "LastErrorMessage": "下線原因",
+    "LastErrorMessage": "離線原因",
     "LastSetValue": "上次值",
     "RawValue": "原始值",
     "Value": "即時值",
