--- a/src/ThingsGateway.Gateway.ASPNetCore/Locales/zh-TW.json
+++ b/src/ThingsGateway.Gateway.ASPNetCore/Locales/zh-TW.json
@@ -1,9 +1,9 @@
 ﻿{
   "ThingsGateway.Gateway.Application.ConfigInfoControler": {
-    "ConfigInfoControler": "獲取配置信息",
-    "GetChannelList": "獲取通道信息",
-    "GetCollectDeviceList": "獲取設備信息",
-    "GetVariableList": "獲取變量信息"
+    "ConfigInfoControler": "獲取配置資訊",
+    "GetChannelList": "獲取通道資訊",
+    "GetCollectDeviceList": "獲取設備資訊",
+    "GetVariableList": "獲取變量資訊"
   },
   "ThingsGateway.Gateway.Application.ControlControler": {
     "ControlControler": "設備控制",
