--- a/src/ThingsGateway.Gateway.Application/Locales/zh-TW.json
+++ b/src/ThingsGateway.Gateway.Application/Locales/zh-TW.json
@@ -107,6 +107,7 @@
     "ReadExpressions": "讀取表達式",
     "WriteExpressions": "寫入表達式",
     "RpcWriteEnable": "遠端寫入",
+    "SaveValue": "保存值",
     "AlarmDelay": "警報延遲",
     "BoolOpenAlarmEnable": "布林開警報啟用",
     "BoolOpenRestrainExpressions": "布林開警報約束",
@@ -368,6 +369,7 @@
     "ReadExpressions": "讀取表達式",
     "WriteExpressions": "寫入表達式",
     "RpcWriteEnable": "遠端寫入",
+    "SaveValue": "保存值",
     "AlarmDelay": "警報延遲",
     "BoolOpenAlarmEnable": "布林開警報啟用",
     "BoolOpenRestrainExpressions": "布林開警報約束",
