--- a/src/ThingsGateway.Gateway.Razor/Locales/en-US.json
+++ b/src/ThingsGateway.Gateway.Razor/Locales/en-US.json
@@ -12,6 +12,7 @@
     "DeviceRedundantThread": "RedundantSwitch",
     "DeleteCache": "DeleteCache",
     "GatewayDeviceLog": "ChannelLog",
+    "RelationVariable": "RelationVariable",
     "GatewayDevicePause": "DevicePause",
     "GatewayDeviceRestart": "DeviceRestart"
   },
@@ -76,11 +77,13 @@
   },
   "ThingsGateway.Gateway.Razor.CollectDevicePage": {
     "ImportExcel": "Import Collect Device",
-    "Clear": "Clear"
+    "Clear": "Clear",
+    "RelationVariable": "RelationVariable"
   },
   "ThingsGateway.Gateway.Razor.BusinessDevicePage": {
     "ImportExcel": "Import Business Device",
-    "Clear": "Clear"
+    "Clear": "Clear",
+    "RelationVariable": "RelationVariable"
   },
   "ThingsGateway.Gateway.Razor.VariablePage": {
     "ImportExcel": "Import Variable",
