--- a/src/ThingsGateway.Server/Locales/en-US.json
+++ b/src/ThingsGateway.Server/Locales/en-US.json
@@ -38,8 +38,7 @@
     "后台日志": "Backend",
     "RPC日志": "RPC",
     "物联网关": "Gateway",
-    "系统管理": "Admin",
-    "网关冗余": "Redundancy"
+    "系统管理": "Admin"
   },
 
   "ThingsGateway.Admin.Razor.AdminIndex": {
