--- a/src/ThingsGateway.Server/Locales/zh-CN.json
+++ b/src/ThingsGateway.Server/Locales/zh-CN.json
@@ -38,8 +38,7 @@
     "后台日志": "后台日志",
     "RPC日志": "RPC日志",
     "物联网关": "物联网关",
-    "系统管理": "系统管理",
-    "网关冗余": "网关冗余"
+    "系统管理": "系统管理"
   },
 
 
