--- a/src/Gateway/ThingsGateway.Gateway.Razor/Locales/zh-TW.json
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Locales/zh-TW.json
@@ -1,4 +1,13 @@
 ﻿{
+
+
+  "ThingsGateway.Gateway.Razor._Imports": {
+    "PleaseSelect": "請選擇需要操作的數據",
+    "TablesExportButtonExcelText": "導出Excel",
+    "TablesImportButtonExcelText": "導入Excel"
+  },
+
+
   "ThingsGateway.Gateway.Razor.TcpSessionClientDto": {
     "Id": "Id",
     "IP": "IP",
