--- a/src/ThingsGateway.Server/Locales/zh-CN.json
+++ b/src/ThingsGateway.Server/Locales/zh-CN.json
@@ -17,6 +17,8 @@
     "用户管理": "用户管理",
     "角色管理": "角色管理",
     "菜单管理": "菜单管理",
+    "机构管理": "机构管理",
+    "职位管理": "职位管理",
     "系统运维": "系统运维",
     "系统配置": "系统配置",
     "字典管理": "字典管理",
