--- a/src/ThingsGateway.Server/Locales/zh-TW.json
+++ b/src/ThingsGateway.Server/Locales/zh-TW.json
@@ -13,9 +13,11 @@
 
     "系统首页": "系統首頁",
     "权限管理": "權限管理",
-    "用户管理": "使用者管理",
+    "用戶管理": "用戶管理",
     "角色管理": "角色管理",
     "菜单管理": "選單管理",
+    "机构管理": "機構管理",
+    "职位管理": "職位管理",
     "系统运维": "系統運維",
     "系统配置": "系統配置",
     "字典管理": "字典管理",
