--- a/src/Gateway/ThingsGateway.Gateway.Razor/Locales/en-US.json
+++ b/src/Gateway/ThingsGateway.Gateway.Razor/Locales/en-US.json
@@ -1,4 +1,13 @@
 ﻿{
+
+
+  "ThingsGateway.Gateway.Razor._Imports": {
+    "PleaseSelect": "Please select the data",
+    "TablesExportButtonExcelText": "Export Excel",
+    "TablesImportButtonExcelText": "Import Excel"
+  },
+
+
   "ThingsGateway.Gateway.Razor.TcpSessionClientDto": {
     "Id": "Id",
     "IP": "IP",
