--- a/src/ThingsGateway.Server/Locales/zh-TW.json
+++ b/src/ThingsGateway.Server/Locales/zh-TW.json
@@ -1,4 +1,24 @@
 ﻿{
+
+
+  "ThingsGateway.Admin.Razor.NotFound404": {
+    "404": "抱歉，您訪問的頁面不存在。",
+    "401": "抱歉，您無權限訪問該頁面。",
+    "Home": "回到首頁",
+    "Login": "重新登錄"
+  },
+  "ThingsGateway.Admin.Razor.Login": {
+    "LoginErrorh1": "登錄異常",
+    "LoginSuccessh1": "登錄成功",
+    "LoginSuccessc1": "即將跳轉頁面",
+    "LoginErrorh2": "登錄失敗",
+    "LoginErrorc2": "請聯繫管理員!",
+    "Remark1": "邊緣採集網關",
+    "Remark2": "數據集中，多路轉發",
+    "Remark3": "邊緣計算，高效處理",
+    "Welcome": "歡迎使用"
+  },
+
   "ThingsGateway.Razor.MainLayout": {
     "About": "關於",
     "FullScreenButton": "全螢幕",
