--- a/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-CN.json
+++ b/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-CN.json
@@ -1,22 +1,22 @@
 ﻿{
 
 
-  "ThingsGateway.Gateway.Application.ConfigInfoControler": {
-    "ConfigInfoControler": "获取配置信息",
+  "ThingsGateway.Gateway.Application.ConfigInfoController": {
+    "ConfigInfoController": "获取配置信息",
     "GetChannelList": "获取通道信息",
     "GetCollectDeviceList": "获取设备信息",
     "GetVariableList": "获取变量信息"
   },
-  "ThingsGateway.Gateway.Application.ControlControler": {
-    "ControlControler": "设备控制",
+  "ThingsGateway.Gateway.Application.ControlController": {
+    "ControlController": "设备控制",
     "PauseCollectThread": "控制采集线程启停",
     "PauseBusinessThread": "控制业务线程启停",
     "RestartCollectDeviceThread": "重启采集线程",
     "RestartBusinessDeviceThread": "重启业务线程",
     "WriteDeviceMethods": "写入变量"
   },
-  "ThingsGateway.Gateway.Application.RuntimeInfoControler": {
-    "RuntimeInfoControler": "获取运行态信息",
+  "ThingsGateway.Gateway.Application.RuntimeInfoController": {
+    "RuntimeInfoController": "获取运行态信息",
     "GetCollectDeviceList": "获取设备信息",
     "GetVariableList": "获取变量信息",
     "GetRealAlarmList": "获取实时报警信息",
