--- a/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-TW.json
+++ b/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-TW.json
@@ -1,21 +1,21 @@
 ﻿{
 
-  "ThingsGateway.Gateway.Application.ConfigInfoControler": {
-    "ConfigInfoControler": "獲取配置資訊",
+  "ThingsGateway.Gateway.Application.ConfigInfoController": {
+    "ConfigInfoController": "獲取配置資訊",
     "GetChannelList": "獲取通道資訊",
     "GetCollectDeviceList": "獲取設備資訊",
     "GetVariableList": "獲取變量資訊"
   },
-  "ThingsGateway.Gateway.Application.ControlControler": {
-    "ControlControler": "設備控制",
+  "ThingsGateway.Gateway.Application.ControlController": {
+    "ControlController": "設備控制",
     "PauseCollectThread": "控制採集線程啟停",
     "PauseBusinessThread": "控制業務線程啟停",
     "RestartCollectDeviceThread": "重启採集線程",
     "RestartBusinessDeviceThread": "重启業務線程",
     "WriteDeviceMethods": "寫入變量"
   },
-  "ThingsGateway.Gateway.Application.RuntimeInfoControler": {
-    "RuntimeInfoControler": "獲取運行態信息",
+  "ThingsGateway.Gateway.Application.RuntimeInfoController": {
+    "RuntimeInfoController": "獲取運行態信息",
     "GetCollectDeviceList": "獲取設備信息",
     "GetVariableList": "獲取變量信息",
     "GetRealAlarmList": "獲取實時警報信息",
