--- a/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-CN.json
+++ b/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-CN.json
@@ -145,7 +145,7 @@
     "ReadExpressions": "读取表达式",
     "WriteExpressions": "写入表达式",
     "RpcWriteEnable": "远程写入",
-    "SaveValue": "保存值",
+    "SaveValue": "保存初始值",
 
     "AlarmDelay": "报警延时",
     "BoolOpenAlarmEnable": "布尔开报警使能",
@@ -422,7 +422,8 @@
     "ReadExpressions": "读取表达式",
     "WriteExpressions": "写入表达式",
     "RpcWriteEnable": "远程写入",
-    "SaveValue": "保存值",
+    "Value": "初始值",
+    "SaveValue": "保存初始值",
 
     "AlarmDelay": "报警延时",
     "BoolOpenAlarmEnable": "布尔开报警使能",
