--- a/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-TW.json
+++ b/src/Gateway/ThingsGateway.Gateway.Application/Locales/zh-TW.json
@@ -131,7 +131,7 @@
     "ReadExpressions": "讀取表達式",
     "WriteExpressions": "寫入表達式",
     "RpcWriteEnable": "遠端寫入",
-    "SaveValue": "保存值",
+    "SaveValue": "保存初始值",
     "AlarmDelay": "警報延遲",
     "BoolOpenAlarmEnable": "布林開警報啟用",
     "BoolOpenRestrainExpressions": "布林開警報約束",
@@ -386,7 +386,8 @@
     "ReadExpressions": "讀取表達式",
     "WriteExpressions": "寫入表達式",
     "RpcWriteEnable": "遠端寫入",
-    "SaveValue": "保存值",
+    "SaveValue": "保存初始值",
+    "Value": "初始值",
     "AlarmDelay": "警報延遲",
     "BoolOpenAlarmEnable": "布林開警報啟用",
     "BoolOpenRestrainExpressions": "布林開警報約束",
