调整插件基类，增加上传模式配置

--- a/src/Gateway/ThingsGateway.Gateway.Application/Locales/en-US.json
+++ b/src/Gateway/ThingsGateway.Gateway.Application/Locales/en-US.json
@@ -1,5 +1,9 @@
 ﻿{
-
+  "ThingsGateway.Gateway.Application.BusinessUpdateEnum": {
+    "Change": "Change",
+    "Interval": "Interval",
+    "IntervalOrChange": "IntervalOrChange"
+  },
 
   "ThingsGateway.Gateway.Application.ConfigInfoController": {
     "ConfigInfoController": "Get configuration information",
